--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "untitled2",
+  "name": "nuitdelinfo",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "main": "main.js",
   "dependencies": {
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
-  }
+    "express": "^4.17.1",
+    "nodemon": "^2.0.6"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YannickTektek/nuitdelinfo.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/YannickTektek/nuitdelinfo/issues"
+  },
+  "homepage": "https://github.com/YannickTektek/nuitdelinfo#readme"
 }
