--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "nodemon": "^2.0.6"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
